--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -76,7 +76,9 @@ ignored = [
 
 [[constraint]]
   name = "github.com/go-sql-driver/mysql"
-  revision = "2cc627ac8defc45d65066ae98f898166f580f9a4"
+  source = "https://github.com/tpetr/mysql.git"
+  revision = "62393613baaf866c56b85a89c37db1c11cf9a332"
+  #revision = "2cc627ac8defc45d65066ae98f898166f580f9a4"
   #version = "1.3.0" //keeping this since we would rather depend on version then commit
 
 [[constraint]]
